# notely-ai

./: .eslintrc.cjs  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  package.json  vite.config.ts  vite.main.config.ts  vite.preload.config.ts
docs/: transcription-benchmarks.md
native/: CMakeLists.txt  index.d.ts  index.js  package.json
native/src/: addon.cpp  encryption.cpp  encryption.h  license_verify.cpp  license_verify.h  password_crypto.cpp  password_crypto.h  pinning.cpp  pinning.h
scripts/: build-win.cjs  calculate-wer.py  clean-dev.cjs  customSign.cjs  monitor-transcription-memory.sh  obfuscate.cjs  query-summary.cjs  strip-package-json.cjs  validate-transcription.sh
src/common/: config.ts
src/main/: AppManager.ts  logger.ts  main.ts  transcriptionServer.ts
src/main/audio/: SystemAudioService.ts
src/main/auth/: AuthService.ts
src/main/config/: FeatureFlagService.ts
src/main/ipc/: AuthHandlers.ts  ComponentHandlers.ts  DiagnosticsHandlers.ts  ExportHandlers.ts  LLMHandlers.ts  LicenseHandlers.ts  MeetingReminderHandlers.ts  PromptTemplateHandlers.ts  SecurityHandlers.ts  SettingsHandlers.ts  StorageHandlers.ts  SummaryHandlers.ts  SystemAudioHandlers.ts  TagHandlers.ts  TranscriptionHandlers.ts  UpdateHandlers.ts  WindowHandlers.ts  index.ts
src/main/llm/: __init__.py  build-nuitka.sh  build_llm_server.ps1  build_llm_server.sh  chunking_pipeline.py  requirements.txt  server.py
src/main/llm/backends/: __init__.py  llamacpp_backend.py
src/main/managers/: AuthManager.ts  MacMenuManager.ts  WindowManager.ts
src/main/services/: featureFlags.ts  index.ts
src/main/services/components/: ComponentManager.ts
src/main/services/export/: ExportService.ts
src/main/services/gpu/: GPUDetectionService.ts  ModelCompatibility.ts  index.ts  types.ts
src/main/services/license/: LicenseService.ts
src/main/services/llm/: LLMServerManager.ts  index.ts  types.ts
src/main/services/models/: HuggingFaceAuth.ts  ModelDownloader.ts  ModelRegistry.ts  index.ts  types.ts
src/main/services/security/: keytar.ts  (+3 more)
src/main/storage/: StorageService.ts  baseline-schema.sql  index.ts
src/main/transcription/: cli.py  requirements.txt  server_v3.py  sliding_window.py  transcriber.py  vad.py  whisper_server.spec
src/main/windows/: gpuErrorWindow.ts
src/preload/: index.ts
src/renderer/: auth.html  index.html  meeting-reminder.html  passwordUnlock.html
src/renderer/app/: AppWithSetup.tsx  routes.tsx
src/renderer/public/: transcriptionRecorder.worklet.js
src/renderer/types/: global.d.ts
src/shared/: ipc-channels.ts
src/shared/types/: components.ts
(+180 files in other folders)
